--- a/lib/proxy/index.html
+++ b/lib/proxy/index.html
@@ -11,9 +11,10 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 </head>
 <body>
-<div id="container">aaa</div>
-<script type="text/javascript">
-
-</script>
+list
+<ul id="container">
+  
+</ul>
+<script type="text/javascript" src="./client.js" ></script>
 </body>
 </html>
